--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,10 @@
-cmake_minimum_required(VERSION 3.23)
 project(FaceRecon)
+
+cmake_minimum_required(VERSION 3.23)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_AUTOMOC ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Core Widgets)
-find_package(OpenCV REQUIRED)
-
-
-add_executable(FaceRecon MainWindow.h MainWindow.cpp main.cpp)
-target_link_libraries(FaceRecon PRIVATE Qt6::Core Qt6::Widgets ${OpenCV_LIBS})
+add_subdirectory(3rdparty)
+add_subdirectory(FaceReconDesktop)
+add_subdirectory(FaceReconServer)
