--- a/FaceReconServer/CMakeLists.txt
+++ b/FaceReconServer/CMakeLists.txt
@@ -4,4 +4,4 @@ find_package(CURL)
 find_package(cpprestsdk REQUIRED)
 find_package(OpenCV REQUIRED)
 add_executable(FaceReconServer main.cpp)
-target_link_libraries(FaceReconServer PRIVATE Crow CURL::libcurl cpprestsdk::cpprest opencv_ml opencv_dnn opencv_core opencv_flann)
+target_link_libraries(FaceReconServer PRIVATE Crow CURL::libcurl cpprestsdk::cpprest ${OpenCV_LIBS})
