--- a/FaceReconDesktop/CMakeLists.txt
+++ b/FaceReconDesktop/CMakeLists.txt
@@ -2,7 +2,6 @@ project(FaceReconDesktop)
 
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
 find_package(OpenCV REQUIRED)
-find_package(Crow)
 
 add_executable(FaceReconDesktop MainWindow.h MainWindow.cpp main.cpp)
-target_link_libraries(FaceReconDesktop PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets ${OpenCV_LIBS} Crow)
+target_link_libraries(FaceReconDesktop PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets ${OpenCV_LIBS})
