use namespaces properly create common_libraries resize picture when face detected

--- a/FaceReconDesktop/CMakeLists.txt
+++ b/FaceReconDesktop/CMakeLists.txt
@@ -1,8 +1,8 @@
+cmake_minimum_required(VERSION 3.22)
 project(FaceReconDesktop)
 
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
 find_package(OpenCV REQUIRED)
-find_package(CUDNN REQUIRED)
 
-add_executable(FaceReconDesktop NeuralNetwork.h NeuralNetwork.cpp MainWindow.h MainWindow.cpp main.cpp)
-target_link_libraries(FaceReconDesktop PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets ${OpenCV_LIBS} Crow CuDNN::CuDNN)
+add_executable(${PROJECT_NAME} MainWindow.h MainWindow.cpp main.cpp)
+target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets ${OpenCV_LIBS} common_libraries)
