--- a/common_libraries/CMakeLists.txt
+++ b/common_libraries/CMakeLists.txt
@@ -4,7 +4,7 @@ project(common_libraries)
 find_package(OpenCV REQUIRED)
 find_package(CUDNN REQUIRED)
 
-set(SOURCES src/NeuralNetwork.cpp src/utilities.cpp)
+set(SOURCES src/NeuralNetwork.cpp src/ThreadSafeNeuralNetwork.cpp src/utilities.cpp)
 
 add_library(${PROJECT_NAME} ${SOURCES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
