--- a/common_libraries/CMakeLists.txt
+++ b/common_libraries/CMakeLists.txt
@@ -3,7 +3,7 @@ project(common_libraries)
 
 find_package(OpenCV REQUIRED)
 
-set(SOURCES src/NeuralNetwork.cpp src/ThreadSafeNeuralNetwork.cpp src/utilities.cpp)
+set(SOURCES src/FaceImageEvaluator.cpp src/ThreadSafeFaceImageEvaluator.cpp src/utilities.cpp)
 
 add_library(${PROJECT_NAME} ${SOURCES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
