Server Backend further features developed

--- a/FaceReconServer/CMakeLists.txt
+++ b/FaceReconServer/CMakeLists.txt
@@ -6,5 +6,5 @@ find_package(cpprestsdk REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(Boost REQUIRED) 
 
-add_executable(${PROJECT_NAME} ServerBackend.h ServerBackend.cpp main.cpp)
+add_executable(${PROJECT_NAME} Data.h ServerBackend.h ServerBackend.cpp main.cpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE Crow CURL::libcurl cpprestsdk::cpprest ${OpenCV_LIBS} ${Boost_LIBRARIES} common_libraries)
